--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
 
 					<div class="input-container">
 						<span>E-mail*</span>
-						<input type="text" name="nome" required />
+						<input type="text" name="E-mail" required />
 					</div><!--input-container-->
 
 					<div class="input-container">
 						<span>Telefone*</span>
-						<input type="text" name="nome" required />
+						<input type="text" name="Telefone" required />
 					</div><!--input-container-->
 
 					<p class="warning">*Campos obrigatórios</p>
