--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<div class="container-list">
 				<ul>
 					<li>Entenda como a programação faz a diferença no mundo atual;</li>
-					<li>Inspiri-se com exemplos de superação na programação;</li>
+					<li>Inspire-se com exemplos de superação na programação;</li>
 					<li>Tenha um direcionamento de como construir uma carreira sólida;</li>
 					<li> <strong>Não desista mesmo com dificuldades!!</strong> </li>
 				</ul>
